k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/use-regex: "true"
    # kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
  - host: app.real.time.com
    http:
      paths: 
      - path: /
        pathType: Prefix
        backend:
          service:
            name: fe-service
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: todo-service
            port:
              number: 3001
      - path: /chat/api
        pathType: Prefix
        backend:
          service:
            name: chat-service
            port:
              number: 3002
# check minikube addons enable ingress
